gitops/apps/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: demo
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
