gitops/apps/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 80
